--- a/packages/embeds/embed-core/src/styles.css
+++ b/packages/embeds/embed-core/src/styles.css
@@ -1,10 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@font-face {
-  font-family: 'Cal Sans';
-  src: url("https://cal.com/cal.ttf");
-}
 
 h1,
 h2,
@@ -12,7 +8,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Cal Sans';
+  font-family: 'Open Sans';
   font-weight: normal;
   letter-spacing: normal;
 }
