--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -3,10 +3,10 @@
 @tailwind utilities;
 
 :root {
-  --brand-color: #292929;
+  --brand-color: #5506be;
   --brand-text-color: #ffffff;
   --brand-color-dark-mode: #fafafa;
-  --brand-text-color-dark-mode: #292929;
+  --brand-text-color-dark-mode: #5506be;
 }
 
 /*
@@ -415,7 +415,7 @@ hr {
         transform: translateY(30%);
         pointer-events: none;
     }
-    to { 
+    to {
         opacity: 1;
         pointer-events: auto;
     }
@@ -434,7 +434,7 @@ hr {
       transform: translateY(-20%);
       pointer-events: none;
     }
-    to { 
+    to {
       opacity: 1;
       pointer-events: auto;
       transform: translateY(0%);
