--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -199,7 +199,7 @@ button[role="switch"][data-state="checked"] {
 
   /* React Select V2 */
   .cal-react-select-container .cal-react-select__control {
-    @apply bg-white min-h-[36px] h-[36px] text-sm leading-4 border-gray-300 hover:border-neutral-400 focus-within:ring-2 focus-within:ring-neutral-800 focus-within:border-0 placeholder:text-gray-400 placeholder:text-sm placeholder:font-normal;
+    @apply bg-white min-h-[36px] h-[36px] text-sm leading-4 placeholder:text-gray-400 placeholder:text-sm placeholder:font-normal;
   }
 
 }
